2007-01-06  Brandon Hale  <brandon@ubuntu.com>

	* src/DBusRemote, src/DBusPlayer:
	First commit of managed DBus port. Most functionality is missing
	from the old code, this will be filled in shortly.

2007-01-01  Brandon Hale  <brandon@ubuntu.com>

	* dbus-sharp/:
	Import managed DBus code for pending conversion.

2006-12-28  Brandon Hale  <brandon@ubuntu.com>

	* src/InfoWindow.cs, src/MagicCoverImage.cs:
	Fix crasher in InfoWindow when Song.Image is null.
	As a side effect, only load unknown-cover.png once, fixing
	a potential leak. Thanks to TJ Fontaine <tjfontaine@gmail.com>.

2006-12-28  Brandon Hale  <brandon@ubuntu.com>
	
	* src/TagDialog.cs, src/PlayerWindow.cs, src/FindStation.cs:
	Apply patch from Łukasz Jernaś to fix remaining l10n issues.
	Gnome bug #365091.

2006-12-23  Brandon Hale  <brandon@ubuntu.com>
	
	* src/InfoWindow.cs, src/TagDialog.cs, src/FirstRunDialog.cs:
	Use GTK stock buttons where appropriate.

2006-12-21  Brandon Hale  <brandon@ubuntu.com>

	* data/icons:
	Add 48 and 32 sizes for tag-new and show-icon icons.
	Thanks to Andreas on bug #384698.

2006-12-20  Brandon Hale  <brandon@ubuntu.com>

	* data/icons:
	Add tag-new and show-info themeable actions icons, thanks to Andreas
	Nilsson on bug #384698. Use icon-theme-installer script from Aaron Bockover.
	* data/glade/PlayerWindow.glade, src/PlayerWindow.cs:
	Update player window to use hicolor icons from Andreas

2006-11-23  Brandon Hale  <brandon@ubuntu.com>

	* src/last-exit.exe.config.in:
	Add dllmap entry for dbus-glib-1, bug #356873

	* src/NotificationArea.cs:
	Copy the latest code from Muine to properly support transparent
	panels, bug #365099

	* po/POTFILES.in, src/Defines.cs.in:
	Apply patches from Pritt on bug #365091 to fix things up 
	for translators.

	* data/icons/*:
	Fix for bug #354430, install application icons properly into the icon
	theme. We still need a 32x32 icon for you artists out there.

2006-11-01  Iain Holmes  <iain@gnome.org>
